2012-01-29  Andrew Okin  <razorblades13@gmail.com>

	* MultiMC.csproj, Resources.cs: Icons are no longer copied to
	  the output directory on build.

2012-01-29  Andrew Okin  <razorblades13@gmail.com>

	* MainWindow.cs: Instances can be launched by double clicking
	  their icons.
	Removed some debug messages that were no longer needed.

2012-01-29  Andrew Okin  <razorblades13@gmail.com>

	* MultiMC.csproj, MainWindow.cs, gui.stetic,
	  EditModsDialog.cs, MultiMC.MainWindow.cs,
	  MultiMC.EditModsDialog.cs: Added a dialog for removing mods

2012-01-29  Andrew Okin  <razorblades13@gmail.com>

	* MainWindow.cs: Fixed dialog window parents

2012-01-29  Andrew Okin  <razorblades13@gmail.com>

	* MultiMC.csproj, MainWindow.cs, Resources.cs,
	  ChangeIconDialog.cs, MultiMC.MainWindow.cs,
	  MultiMC.ChangeIconDialog.cs: Added ability to change icons.

	* ModLoaderProblems.cs: Fixed a minor parsing bug

2012-01-28  Andrew Okin  <razorblades13@gmail.com>

	* ConsoleWindow.cs, Problems.cs, ModLoaderProblems.cs: Added
	  more problem detection

2012-01-28  Andrew Okin  <razorblades13@gmail.com>

	* Problems.cs, MinecraftProblem.cs: Added easily extendable
	  problem detection for telling users what certain error
	  messages mean.

2012-01-27  Andrew Okin  <razorblades13@gmail.com>

	* MessageUtils.cs, Instance.cs, ConsoleWindow.cs,
	  MultiMC.MainWindow.cs: Added some basic crash detection

2012-01-27  Andrew Okin  <razorblades13@gmail.com>

	* StyleUtils.cs, MainWindow.cs, ConsoleWindow.cs: Made the
	  context menus less ugly

2012-01-26  Andrew Okin  <razorblades13@gmail.com>

	* MainWindow.cs, ConsoleWindow.cs: Added icons to windows

	* gui.stetic: 

2012-01-26  Andrew Okin  <razorblades13@gmail.com>

	* ConsoleWindow.cs: Fixed a crash when starting an instance

	* MainWindow.cs: Fixed a crash that occurred when certain
	  files did not exist on startup.

	* SettingsDialog.cs: JavaPath is now set properly

	* MultiMC.csproj: Removed the formatting policy from the