@@ -1,5 +1,9 @@
 2012-01-29  Andrew Okin  <razorblades13@gmail.com>
 
+	* Modder.cs, MainWindow.cs: Fixed the progress bar
+
+2012-01-29  Andrew Okin  <razorblades13@gmail.com>
+
 	* MultiMC.csproj, Resources.cs: Icons are no longer copied to
 	  the output directory on build.
 
